Added an image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey! I'm a heading</h1>
-<p>Hey! I'm a paragraph</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google"> Click Me! I'm a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Iron Man!</title>
+</head>
+<body>
+		<h1>Hey! I'm a heading</h1>
+		<p>Hey! I'm a <b>paragraph</b></p>
+		<p>My Name is <br>Tony</p>
+		<a href="https://google.com" target="_blank" title="Let's go to Google"> Click Me! I'm a link</a>
+		<img src="img/ironman.jpg">
+</body>
+</html>
